tests/valid_inputs/tern_int_double_lvals.cpp

int main() {
	int i = 5;
	double d = 3.14;
	bool b = false;
	return b ? i : d;
}
