tests/invalid_inputs/sema/ternary_char_and_double.cpp

int main() {
	char c;
	double d;
	return true ? d : c;
}
